--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Check missing/extra dependent keys on computed properties",
   "main": "index.js",
   "scripts": {
-    "test": "qunit"
+    "test": "mocha -w --compilers coffee:coffee-script/register"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,8 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "coffeelint": "1.11.1",
     "coffee-script": "1.10.0",
-    "qunit": "0.7.6"
+    "coffeelint": "1.11.1",
+    "mocha": "^2.3.3"
   }
 }
